--- a/Data Handling/Mateus_exploration.ipynb
+++ b/Data Handling/Mateus_exploration.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 569,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,14 +24,12 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import os\n",
-    "\n",
-    "#(data['diabetes'][data['medication'].apply(len) == 2] == 1).value_counts()\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +768,7 @@
        "additional_diagnosis_description                    Hyperosmolality and/or hypernatremia  "
       ]
      },
-     "execution_count": 572,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +815,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 573,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +850,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +870,7 @@
        "Name: readmitted_binary, dtype: float64"
       ]
      },
-     "execution_count": 574,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +901,7 @@
        "Name: prescribed_diabetes_meds, dtype: float64"
       ]
      },
-     "execution_count": 575,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -936,15 +934,14 @@
      "output_type": "stream",
      "text": [
       "glucose_test_result\n",
-      "Diabetic             0.142684\n",
-      "Probably diabetic    0.130806\n",
-      "Normal               0.121816\n",
-      "Not tested           0.110647\n",
+      ">300    0.142684\n",
+      ">200    0.130806\n",
+      "Norm    0.121816\n",
       "Name: readmitted_binary, dtype: float64\n",
       "a1c_test_result\n",
-      "Not tested    0.114228\n",
-      "Normal        0.099914\n",
-      "Diabetic      0.097944\n",
+      ">7      0.101551\n",
+      "Norm    0.099914\n",
+      ">8      0.096231\n",
       "Name: readmitted_binary, dtype: float64\n"
      ]
     }
@@ -969,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1024,7 +1021,7 @@
        "Name: readmitted_binary, dtype: float64"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 587,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1055,7 +1052,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 587,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1092,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 588,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1106,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1123,7 @@
        "Name: readmitted_binary, dtype: float64"
       ]
      },
-     "execution_count": 589,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1151,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1197,7 +1194,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 591,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1208,7 +1205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1217,7 +1214,7 @@
        "True"
       ]
      },
-     "execution_count": 592,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1276,7 +1273,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1287,34 +1284,97 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lets check if we can fill admission_source with admission_type, and *vice-versa*"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 612,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available admission sources:  71236\n",
-      "Available admission types:  71236\n",
-      "Intersection:  71236\n"
+      "                    mean  count\n",
+      "admission_type                 \n",
+      "1               0.114938  37742\n",
+      "5               0.112101  13024\n",
+      "6               0.108312   7026\n",
+      "0               0.103853  13211\n",
+      "3               0.088785    214\n",
+      "2               0.000000      6\n",
+      "4               0.000000     13\n",
+      "                      mean  count\n",
+      "admission_source                 \n",
+      "0                 0.181818     11\n",
+      "12                0.155039    129\n",
+      "3                 0.140187    107\n",
+      "7                 0.127731    595\n",
+      "10                0.125000      8\n",
+      "1                 0.116620  40319\n",
+      "16                0.106825   4718\n",
+      "11                0.105263    779\n",
+      "4                 0.105184  20678\n",
+      "8                 0.097311   1562\n",
+      "14                0.095964   2230\n",
+      "15                0.079545     88\n",
+      "6                 0.000000      2\n",
+      "5                 0.000000      1\n",
+      "9                 0.000000      7\n",
+      "2                 0.000000      1\n",
+      "13                0.000000      1\n"
      ]
     }
    ],
    "source": [
-    "source_indices = data['admission_source'].notna().index\n",
-    "type_indices = data['admission_type'].notna().index\n",
-    "# Check for intersection\n",
-    "print('Available admission sources: ', len(source_indices))\n",
-    "print('Available admission types: ', len(type_indices))\n",
-    "print('Intersection: ', len(source_indices.intersection(type_indices)))"
+    "print(data.groupby('admission_type', dropna=False)['readmitted_binary'].agg(['mean', 'count']).sort_values(by='mean', ascending=False))\n",
+    "print(data.groupby('admission_source', dropna=False)['readmitted_binary'].agg(['mean', 'count']).sort_values(by='mean', ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not Available is the same as Nan, so lets replace Not available with nan for now"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['admission_type'] = data['admission_type'].apply(lambda x: None if x == 'Not Available' else x)\n",
+    "data['admission_source'] = data['admission_source'].apply(lambda x: None if x == ' Not Available' else x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lets use a predictive model to impute the Not Available values in admission_type. Before we do that, we need to encode the categorical variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16]\n",
+      "[0 1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "# Lets encode the admission_type\n",
+    "encoder_type = LabelEncoder()\n",
+    "encoder_source = LabelEncoder()\n",
+    "data['admission_type'] = encoder_type.fit_transform(data['admission_type'])\n",
+    "data['admission_source'] = encoder_source.fit_transform(data['admission_source'])\n",
+    "print(encoder_source.classes_)\n",
+    "print(encoder_type.classes_)"
    ]
   },
   {
@@ -1326,277 +1386,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 610,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>admission_source</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Court/Law Enforcement</th>\n",
-       "      <td>0.181818</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>HMO Referral</th>\n",
-       "      <td>0.155039</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Not Mapped</th>\n",
-       "      <td>0.140187</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from a Skilled Nursing Facility (SNF)</th>\n",
-       "      <td>0.127731</td>\n",
-       "      <td>595</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from hospital inpt/same fac reslt in a sep claim</th>\n",
-       "      <td>0.125000</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Emergency Room</th>\n",
-       "      <td>0.116620</td>\n",
-       "      <td>40319</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.106825</td>\n",
-       "      <td>4718</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Clinic Referral</th>\n",
-       "      <td>0.105263</td>\n",
-       "      <td>779</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Physician Referral</th>\n",
-       "      <td>0.105184</td>\n",
-       "      <td>20678</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from another health care facility</th>\n",
-       "      <td>0.097311</td>\n",
-       "      <td>1562</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from a hospital</th>\n",
-       "      <td>0.095964</td>\n",
-       "      <td>2230</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Not Available</th>\n",
-       "      <td>0.079545</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Sick Baby</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from Ambulatory Surgery Center</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Transfer from critial access hospital</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Extramural Birth</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Normal Delivery</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                                                        mean  count\n",
-       "admission_source                                                   \n",
-       " Court/Law Enforcement                              0.181818     11\n",
-       "HMO Referral                                        0.155039    129\n",
-       " Not Mapped                                         0.140187    107\n",
-       " Transfer from a Skilled Nursing Facility (SNF)     0.127731    595\n",
-       " Transfer from hospital inpt/same fac reslt in ...  0.125000      8\n",
-       " Emergency Room                                     0.116620  40319\n",
-       "NaN                                                 0.106825   4718\n",
-       "Clinic Referral                                     0.105263    779\n",
-       " Physician Referral                                 0.105184  20678\n",
-       " Transfer from another health care facility         0.097311   1562\n",
-       "Transfer from a hospital                            0.095964   2230\n",
-       " Not Available                                      0.079545     88\n",
-       " Sick Baby                                          0.000000      1\n",
-       " Transfer from Ambulatory Surgery Center            0.000000      2\n",
-       " Transfer from critial access hospital              0.000000      7\n",
-       " Extramural Birth                                   0.000000      1\n",
-       "Normal Delivery                                     0.000000      1"
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14, 15, 16])"
       ]
      },
-     "execution_count": 610,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Lets check information about the admission_source\n",
-    "data.groupby('admission_source', dropna=False)['readmitted_binary'].agg(['mean', 'count']).sort_values(by='mean', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 611,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mean</th>\n",
-       "      <th>count</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>admission_type</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Emergency</th>\n",
-       "      <td>0.114938</td>\n",
-       "      <td>37742</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Urgent</th>\n",
-       "      <td>0.112101</td>\n",
-       "      <td>13024</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>NaN</th>\n",
-       "      <td>0.109552</td>\n",
-       "      <td>3706</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Not Available</th>\n",
-       "      <td>0.106928</td>\n",
-       "      <td>3320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Elective</th>\n",
-       "      <td>0.103853</td>\n",
-       "      <td>13211</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Not Mapped</th>\n",
-       "      <td>0.088785</td>\n",
-       "      <td>214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Newborn</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Trauma Center</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                    mean  count\n",
-       "admission_type                 \n",
-       "Emergency       0.114938  37742\n",
-       "Urgent          0.112101  13024\n",
-       "NaN             0.109552   3706\n",
-       "Not Available   0.106928   3320\n",
-       "Elective        0.103853  13211\n",
-       "Not Mapped      0.088785    214\n",
-       "Newborn         0.000000      6\n",
-       "Trauma Center   0.000000     13"
-      ]
-     },
-     "execution_count": 611,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Now for admission_type\n",
-    "data.groupby('admission_type', dropna=False)['readmitted_binary'].agg(['mean', 'count']).sort_values(by='mean', ascending=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "# Lets encode the admission_source and admission_type\n",
-    "le_source = LabelEncoder()\n",
-    "le_type = LabelEncoder()\n",
-    "\n",
-    "data['admission_source'] = le_source.fit_transform(data['admission_source'])\n",
-    "data['admission_type'] = le_type.fit_transform(data['admission_type'])"
+    "encoder_source.classes_     CRFVTB7N8M90 BVC    1"
    ]
   }
  ],
