--- a/Data Handling/workbook_new.ipynb
+++ b/Data Handling/workbook_new.ipynb
@@ -9352,6 +9352,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 273,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "c_patient\n",
+       "135          1.0\n",
+       "378          NaN\n",
+       "729          0.0\n",
+       "774          0.0\n",
+       "927          NaN\n",
+       "            ... \n",
+       "189351095    0.0\n",
+       "189365864    0.0\n",
+       "189445127    0.0\n",
+       "189481478    NaN\n",
+       "189502619    0.0\n",
+       "Name: b_target, Length: 71515, dtype: float64"
+      ]
+     },
+     "execution_count": 273,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.groupby('c_patient')['b_target'].max()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
