--- a/Data Handling/binary_exploration.ipynb
+++ b/Data Handling/binary_exploration.ipynb
@@ -26,42 +26,16 @@
     "import seaborn as sns\n",
     "import re\n",
     "import os\n",
-    "from scipy.stats import chi2_contingency\n",
+    "from scipy.stats import chi2_contingencyc\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "from IPython.display import display_html\n",
+    "from IPython.display import display, HTML\n",
     "\n",
-    "\n",
-    "# -------------------------------------------------------------------------\n",
-    "# Imputer\n",
-    "from sklearn.impute import KNNImputer\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
-    "from sklearn.preprocessing import RobustScaler\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "from imblearn.under_sampling import RandomUnderSampler\n",
-    "from sklearn.model_selection import KFold\n",
-    "from sklearn.model_selection import cross_val_score\n",
-    "from sklearn.feature_selection import RFE\n",
-    "\n",
-    "# Model imports\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.svm import SVC\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "\n",
-    "# Metrics imports\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn.metrics import f1_score\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import classification_report"
+    "from sklearn.impute import KNNImputer\n",
+    "from sklearn.metrics import f1_score"
    ]
   },
   {
@@ -403,8 +377,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import display, HTML\n",
-    "\n",
     "def var_report(column_name, data=data, train_ids=train_ids, test_ids=test_ids):\n",
     "    # If some of the train_ids are not in the data, dont get an error\n",
     "    train_ids = [idx for idx in train_ids if idx in data.index]\n",
@@ -10687,7 +10659,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
