--- a/Data Handling/binary_exploration.ipynb
+++ b/Data Handling/binary_exploration.ipynb
@@ -5116,7 +5116,7 @@
     }
    ],
    "source": [
-    "group = data.groupby('c_specialty', dropna=False)['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
+    "group = data.groupby('c_specialty', dropna=False)['b_target'].agg(['mean', 'count']).sort_values(by='mean', ascending=False)\n",
     "# Only print the specialties with more than 1000 observations\n",
     "group_ = group[group['count'] > 500]\n",
     "group_"
@@ -5744,7 +5744,7 @@
    ],
    "source": [
     "# Lets group the discharge dispositions into groups\n",
-    "group = data.groupby('c_disp', dropna=False)['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
+    "group = data.groupby('c_disp', dropna=False)['b_target'].agg(['mean', 'count']).sort_values(by='mean', ascending=False)\n",
     "group_ = group[group['count'] > 200]\n",
     "group_\n"
    ]
@@ -6340,7 +6340,7 @@
     }
    ],
    "source": [
-    "group = data.groupby('c_source', dropna=False)['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
+    "group = data.groupby('c_source', dropna=False)['b_target'].agg(['mean', 'count']).sort_values(by='mean', ascending=False)\n",
     "group"
    ]
   },
@@ -6358,7 +6358,7 @@
     "referral = [col for col in data['c_source'].dropna().unique() if 'Referral' in col]\n",
     "data['c_source'] = data['c_source'].replace(referral, 'Referral')\n",
     "\n",
-    "# Transfer from a hospital will be grouped into 'Transfer' - Although there is a higher mean target in some of the transfer categories, we also have to look at the std\n",
+    "# Transfer from a hospital will be grouped into 'Transfer'\n",
     "transfer = [col for col in data['c_source'].dropna().unique() if 'Transfer' in col]\n",
     "data['c_source'] = data['c_source'].replace(transfer, 'Transfer')\n",
     "\n",
@@ -7790,9 +7790,9 @@
     }
    ],
    "source": [
-    "group1 = data.groupby('c_diag1')['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
-    "group2 = data.groupby('c_diag2')['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
-    "group3 = data.groupby('c_diag3')['b_target'].agg(['mean', 'std', 'count']).sort_values(by='mean', ascending=False)\n",
+    "group1 = data.groupby('c_diag1')['b_target'].agg(['mean','count']).sort_values(by='mean', ascending=False)\n",
+    "group2 = data.groupby('c_diag2')['b_target'].agg(['mean','count']).sort_values(by='mean', ascending=False)\n",
+    "group3 = data.groupby('c_diag3')['b_target'].agg(['mean','count']).sort_values(by='mean', ascending=False)\n",
     "\n",
     "# Filter groups based on count > 200\n",
     "filtered_group1 = group1[group1['count'] > 500]\n",
